# distributed-key-server

./: .gitignore  DESIGN.md  README.md
crypto/: Cargo.toml
crypto/src/: elgamal.rs  ibe.rs  lib.rs  tss.rs
frontend/: constants.ts  middleware.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/config/: route.ts
frontend/app/api/decrypt/: route.ts
frontend/app/api/encrypt/: route.ts
frontend/app/api/send-email/: route.ts
frontend/app/auth/callback/: route.ts
frontend/components/: auth-button.tsx  decrypt-form.tsx  encrypt-form.tsx  system-config.tsx
frontend/designs/: home.html
frontend/lib/: database.types.ts  db.ts  emailUtils.ts  ibe.ts  supabase-browser.ts  supabase-server.ts  types.ts
frontend/supabase/.temp/: linked-project.json
frontend/supabase/migrations/: 20250527000001_initial_schema.sql
server/: Cargo.toml  message.sealed.json  message.txt
server/configs/: master-public-key.hex  public.yaml  server-0.yaml  server-1.yaml  server-2.yaml
server/src/: main.rs
