[package]
name = "distributed-key-server-poc"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crypto = { path = "../crypto" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "5f87e04bb21d295ef6b39375a06615d45cbb906c", features = [
  "aes",
] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "5f87e04bb21d295ef6b39375a06615d45cbb906c" }
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
